--- a/index.html
+++ b/index.html
@@ -11,7 +11,14 @@
     <title>Password Generator</title>
 </head>
 <body>
-    
+    <h1>Generate a <span>random password</span></h1>
+    <h2>Never use an insecure password again.</h2>
+    <button>Generate passwords</button>
     <script src="index.js"></script>
+    <hr>
+    <div>
+        <span></span>
+        <span></span>
+    </div>
 </body>
 </html>
