--- a/index.html
+++ b/index.html
@@ -6,20 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;300;400&family=Karla:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;300;400&family=Karla:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css"/>
     <title>Password Generator</title>
 </head>
 <body>
     <div class="main-container">
-        <h1>Generate a <span>random password</span></h1>
-        <h2>Never use an insecure password again.</h2>
-        <button>Generate passwords</button>
-        <script src="index.js"></script>
-        <hr>
-        <div>
-            <span></span>
-            <span></span>
+        <div class="content">
+            <h1>Generate a <span class="green-text">random password</span></h1>
+            <h2>Never use an insecure password again.</h2>
+            <button>Generate passwords</button>
+            <script src="index.js"></script>
+            <hr>
+            <div>
+                <span></span>
+                <span></span>
+            </div>
         </div>
     </div>
 </body>
