Create styled/aligned button

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <h2>Never use an insecure password again.</h2>
             <button>Generate passwords</button>
             <script src="index.js"></script>
-            <hr>
+            <span class="horizontal-ruler">
             <div>
                 <span></span>
                 <span></span>
