Add password fields and horizontal ruler

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
             <h2>Never use an insecure password again.</h2>
             <button>Generate passwords</button>
             <script src="index.js"></script>
-            <span class="horizontal-ruler">
+            <div class="horizontal-ruler"></div>
             <div>
-                <span></span>
-                <span></span>
+                <div class="pw-field"></div>
+                <div class="pw-field"></div>
             </div>
         </div>
     </div>
