Add onclick event to generate pw x 2

--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
         <div class="content">
             <h1>Generate a <span class="green-text">random password</span></h1>
             <h2>Never use an insecure password again.</h2>
-            <button>Generate passwords</button>
+            <button onclick="generatePw()">Generate passwords</button>
             <script src="index.js"></script>
             <div class="horizontal-ruler"></div>
             <div>
-                <div class="pw-field"></div>
-                <div class="pw-field"></div>
+                <button id="pw1" class="pw-field"></button>
+                <button id="pw2" class="pw-field"></button>
             </div>
         </div>
     </div>
