Change btn to input, to enable copy to clipboard

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
             <script src="index.js"></script>
             <div class="horizontal-ruler"></div>
             <div>
-                <button id="pw1" class="pw-field"></button><img id="copy-pw-1" src="images/copy-icon.png">
-                <button id="pw2" class="pw-field"></button><img id="copy-pw2" src="images/copy-icon.png">
+                <input type="text" id="pw1" value="" class="pw-field"/><img onclick="copyToClipboard()" id="copy-pw-1" src="images/copy-icon.png">
+                <button id="pw2" class="pw-field"></button><img onclick="copyToClipboard()" id="copy-pw2" src="images/copy-icon.png">
             </div>
         </div>
     </div>
