Fix bug, and feedback after password is copied

--- a/index.html
+++ b/index.html
@@ -19,8 +19,13 @@
             <script src="index.js"></script>
             <div class="horizontal-ruler"></div>
             <div>
-                <button id="pw1" class="pw-field"></button><img onclick="copyPw1()" id="copy-pw-1" src="images/copy-icon.png">
-                <button id="pw2" class="pw-field"></button><img onclick="copyPw2()" id="copy-pw2" src="images/copy-icon.png">
+                <button id="pw1" class="pw-field"></button>
+                <img onclick="copyPw1()" id="copy-pw-1" src="images/copy-icon.png">
+                <p id="copied-el-1" class="copied"></p>
+
+                <button id="pw2" class="pw-field"></button>
+                <img onclick="copyPw2()" id="copy-pw2" src="images/copy-icon.png">
+                <p id="copied-el-2" class="copied"></p>
             </div>
         </div>
     </div>
