--- a/index.html
+++ b/index.html
@@ -21,12 +21,11 @@
             <div>
                 <button id="pw1" class="pw-field"></button>
                 <img onclick="copyPw1()" id="copy-pw-1" src="images/copy-icon.png">
-                <p id="copied-el-1" class="copied"></p>
 
                 <button id="pw2" class="pw-field"></button>
                 <img onclick="copyPw2()" id="copy-pw2" src="images/copy-icon.png">
-                <p id="copied-el-2" class="copied"></p>
             </div>
+            <div id="snackbar">Copied!</div>
         </div>
     </div>
 </body>
